# govno

./: .gitignore  Cargo.toml  Dockerfile  Dockerfile.orchestrator  Dockerfile.worker-critical  Dockerfile.worker-gas  Dockerfile.worker-liquid  Dockerfile.worker-solid  Makefile  README.md  docker-compose.yml  nginx.conf  render.yaml
.github/workflows/: ci.yml
client/: Cargo.toml
client/src/: audio.rs  canvas.rs  dom.rs  lib.rs  protocol.rs  state.rs  ws.rs
orchestrator/: Cargo.toml
orchestrator/src/: main.rs
proto/: Cargo.toml
proto/src/: lib.rs
server/: Cargo.toml
server/src/: main.rs
workers/common/: Cargo.toml
workers/common/src/: lib.rs
workers/critical/: Cargo.toml
workers/critical/src/: main.rs
workers/gas/: Cargo.toml
workers/gas/src/: main.rs
workers/liquid/: Cargo.toml
workers/liquid/src/: main.rs
workers/solid/: Cargo.toml
workers/solid/src/: main.rs
www/: index.html
