[workspace]
members = [
    "proto",
    "orchestrator",
    "workers/common",
    "workers/liquid",
    "workers/solid",
    "workers/gas",
    "workers/critical",
    "client",
]
resolver = "2"

[workspace.dependencies]
tokio             = { version = "1",    features = ["full"] }
serde             = { version = "1",    features = ["derive"] }
serde_json        = "1"
rand              = "0.8"
tracing           = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
futures-util      = { version = "0.3",  default-features = false, features = ["sink", "std"] }
tokio-tungstenite = "0.23"
proto             = { path = "proto" }

# Profiles belong at workspace root — ignored elsewhere
[profile.release]
opt-level = "s"
lto       = true
panic     = "abort"
