[package]
name = "govno-client"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen         = "0.2"
wasm-bindgen-futures = "0.4"
js-sys               = "0.3"

[dependencies.web-sys]
version = "0.3"
features = [
    # WebSocket
    "WebSocket",
    "MessageEvent",
    "ErrorEvent",
    "CloseEvent",
    "BinaryType",
    # DOM
    "Window",
    "Document",
    "Element",
    "HtmlElement",
    "HtmlInputElement",
    "Node",
    "EventTarget",
    "Event",
    # console
    "console",
]

[profile.release]
opt-level  = "s"   # size > speed для wasm
lto        = true
panic      = "abort"
