[package]
name = "govno-client"
version = "0.2.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen         = "0.2"
wasm-bindgen-futures = "0.4"
js-sys               = "0.3"
serde                = { version = "1", features = ["derive"] }
serde_json           = "1"

[dependencies.web-sys]
version = "0.3"
features = [
    "WebSocket", "MessageEvent", "ErrorEvent", "CloseEvent", "BinaryType",
    "Window", "Document", "Element", "HtmlElement", "HtmlInputElement",
    "Node", "EventTarget", "Event", "console",
]

[profile.release]
opt-level  = "s"
lto        = true
panic      = "abort"
