[package]
name = "govno-server"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "govno-server"
path = "src/main.rs"

[dependencies]
axum          = { version = "0.7", features = ["ws"] }
tokio         = { version = "1",   features = ["full"] }
tower-http    = { version = "0.5", features = ["cors"] }
tracing       = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
